@@ -62,6 +62,8 @@ enum _eNotificationTypes
 	NTYPE_AMPERE3,
 	NTYPE_ENERGYINSTANT,
 	NTYPE_ENERGYTOTAL,
+	NTYPE_TODAYENERGY,
+	NTYPE_TODAYGAS,
 };
 
 enum _eShareRights
